# taskX

./: .coverage  .gitignore  .taskxroot  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DOPETASK_MIGRATION_GUIDE.md  Dockerfile  IMPLEMENTER_REPORT_0003_0004.json  IMPLEMENTER_REPORT_0005_0006.md  IMPLEMENTER_REPORT_0007.md  IMPLEMENTER_REPORT_0009.md  README.md  README_DOPETASK_INSTALL.md  README_TASKX_INSTALL.md  SECURITY.md  SHA256SUMS.txt  TASK_PACKET_TP_0018_RELEASE_PREP.md  dopetask_bundle.yaml  pyproject.toml  reorganize_taskx.py  taskx_kernel-0.1.3-py3-none-any.whl
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: claude-code-review.yml  claude-platform-ci.yml  codeql.yml  ghcr.yml  release.yml  security.yml  taskx_ci.yml  taskx_release.yml
.taskx/: project.json
docs/: 00_OVERVIEW.md  01_INSTALL.md  02_QUICKSTART.md  10_ARCHITECTURE.md  11_PUBLIC_CONTRACT.md  12_ROUTER.md  13_TASK_PACKET_FORMAT.md  14_PROJECT_DOCTOR.md  20_WORKTREES_COMMIT_SEQUENCING.md  21_CASE_BUNDLES.md  90_RELEASE.md  91_CONTRACT_AUDIT_SCHEMA.md  92_CONTRACT_CLAIMS_INVENTORY.md  93_CONTRACT_AUDIT_REPORT.md  94_CONTRACT_REMEDIATION_BACKLOG.md  DISTRIBUTION_GUIDE.md  INSTALL.md  KERNEL_PRINCIPLES.md  PROJECT_DOCTOR.md  PR_FLOW.md  REFUSAL_PHILOSOPHY.md  RELEASE.md  TASK_PACKET_FORMAT.md  TP_GIT_WORKFLOW.md  WORKTREES_COMMIT_SEQUENCING.md
docs/llm/: DOPETASK_OPERATOR_SYSTEM.md  TASKX_OPERATOR_SYSTEM.md
dopetask_schemas/: case_bundle.schema.json  loop_envelope.schema.json  task_queue_patch.schema.json
ops/: OUT_OPERATOR_SYSTEM_PROMPT.md  operator_profile.yaml
schemas/: allowlist_diff.schema.json  analysis_summary.schema.json  query_report.schema.json  source_index.schema.json  task_packet_manifest.schema.json  task_queue.schema.json  taskx_ci_gate_report.schema.json  taskx_doctor_report.schema.json  taskx_migration_plan.schema.json
scripts/: check_build_determinism.sh  install.sh  install_taskx.sh  release.sh  startup_jules.sh  taskx_build.sh  taskx_discover_repos.sh  taskx_discover_repos_report.py  taskx_install_into_repo.sh  taskx_install_test.sh  taskx_pin_audit.py  taskx_pin_audit.sh  taskx_pin_audit_report.py  taskx_refresh_llm_docs.py  taskx_release_local.sh  taskx_upgrade_many.sh  taskx_upgrade_many_report.py  taskx_verify_clean_venv.sh
src/dopetask/: __init__.py  __main__.py  ci_gate.py  cli.py  doctor.py  metrics.py  neon_persist.py  ui.py
src/dopetask/artifacts/: __init__.py  canonical_json.py  writer.py
src/dopetask/assets/: __init__.py
src/dopetask/docs/: __init__.py  llm_refresh.py  refresh_llm.py
src/dopetask/git/: __init__.py  branch_guard.py  commit_run.py  commit_sequence.py  finish.py  worktree.py  worktree_ops.py
src/dopetask/guard/: __init__.py  banner.py  identity.py
src/dopetask/manifest/: __init__.py  manifest.py
src/dopetask/obs/: run_artifacts.py
src/dopetask/ops/: __init__.py  blocks.py  cli.py  compile.py  conflicts.py  discover.py  doctor.py  export.py  manual.py
src/dopetask/orchestrator/: __init__.py  handoff.py  kernel.py
src/dopetask/pr/: __init__.py  open.py
src/dopetask/project/: __init__.py  common.py  doctor.py  init.py  mode.py  shell.py  toggles.py  upgrade.py
src/dopetask/router/: __init__.py  availability.py  handoff.py  planner.py  reporting.py  scoring.py  types.py
src/dopetask/runners/: __init__.py  base.py  (+2 more)
src/dopetask_adapters/: __init__.py  base.py  dopemux.py  types.py
src/taskx/: __init__.py  __main__.py  ci_gate.py  cli.py  doctor.py  neon_persist.py  ui.py
src/taskx_adapters/: __init__.py  dopemux.py
taskx_schemas/: __init__.py  promotion_token.schema.json  run_envelope.schema.json  run_summary.schema.json
tests/: conftest.py  test_neon_persist.py  test_repo_identity_guard.py  test_upgrade.py
tests/ops/: test_flash_hardening.py  test_gov_hardening.py  test_ops.py
tests/unit/: test_doctor_runs.py  test_imports.py  test_schema_registry.py
(+185 files in other folders)
